--- a/Website/collsion.html
+++ b/Website/collsion.html
@@ -105,20 +105,20 @@
         <!-- Projects Row -->
         <div class="row">
             <div class="col-md-6 portfolio-item">
-                <a href="#">
+                <a href="subpage/subpage1.html">
                     <img class="img-responsive" src="images/gmm.jpg" alt="">
                 </a>
                 <h3>
-                    <a href="#">Bayesian Gaussian Mixture Model</a>
+                    <a href="subpage/subpage1.html">Bayesian Gaussian Mixture Model</a>
                 </h3>
                 <p>In machine learning, naive Bayes classifiers are a family of simple probabilistic classifiers based on applying Bayes' theorem with strong (naive) independence assumptions between the features.</p>
             </div>
             <div class="col-md-6 portfolio-item">
-                <a href="#">
+                <a href="subpage2/subpage2.html">
                     <img class="img-responsive" src="images/LDA.jpg" alt="">
                 </a>
                 <h3>
-                    <a href="#">Latent Dirichlet allocation</a>
+                    <a href="subpage2/subpage2.html">Latent Dirichlet allocation</a>
                 </h3>
                 <p>In natural language processing, Latent Dirichlet allocation (LDA) is a generative model that allows sets of observations to be explained by unobserved groups that explain why some parts of the data are similar.</p>
             </div>
